public/css/home.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  max-width: 100%;
}

header {
  animation: 1.25s ease 0s both header-opening;
}

h1 {
  font-family: "Roboto Slab", serif;
  font-size: 150px;
  text-shadow: #1d1f22 2px 2px 6px;
}

@media screen and (max-width: 720px) {
  h1 {
    font-size: 4rem;
  }
}

p {
  font-size: 50px;
  max-width: 52ch;
  font-family: "Roboto Slab", serif;
  line-height: 1.25em;
  text-shadow: rgb(0, 0, 0) 2px 2px 10px;
  margin-bottom: 1em;
}

@media screen and (max-width: 720px) {
  p {
    font-size: 2rem;
    max-width: 100%;
  }
}

#home {
  width: 100%;
  height: 100vh;
  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("/assets/images/home.jpg") center no-repeat fixed;
  background-size: cover;
  overflow: hidden;
}

.home-content {
  padding-left: 10%;
}

.home-content h1 {
  margin-top: 80px;
  animation: 1s ease 0.1s both text-appearing;
  color: #ffffff;
}

.home-content p {
  color: rgba(255, 255, 255, 0.85);
  animation: 1s ease 0.5s both text-appearing;
}

#gallery {
  width: 100%;
  height: 60vh;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  background: #fafafa;
  box-shadow: 0 0 10px #1d1f22;
  display: flex;
  z-index: 10;
}

.carousel {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.gallery-content {
  width: 80%;
}

.gallery-content h1 {
  padding: 0;
  color: #2f3136;
}

.gallery-content p {
  color: #36393f;
}

#about-us {
  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/assets/images/ncs.jpg") center no-repeat;
  background-size: cover;
  padding: 5% 10%;
}

#about-us h1 {
  color: white;
}

#about-us p {
  width: 100%;
  font-size: 24px;
  color: #c5c7ca;
}

@media screen and (max-width: 720px) {
  #about-us p {
    font-size: 1.25rem;
  }
}

#apply {
  height: 150px;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0 0 10px #1d1f22;
}

#apply button {
  white-space: nowrap;
  padding: 9px 25px;
  background-color: rgba(106, 8, 153, 1);
  border: none;
  border-radius: 30px;
  cursor: pointer;
  transition: all 0.3s ease 0s;
  color: white;
}

.discord-button {
  transform: scale(1.2);
}

@keyframes header-opening {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes blind-opening {
  from {
    clip-path: polygon(
      /* Top part */ 0 0,
      100% 0,
      100% 50%,
      0 50%,
      /* Bottom part */ 0 50%,
      100% 50%,
      100% 100%,
      0 100%
    );
  }

  to {
    clip-path: polygon(
      /* Top part */ 0 0,
      100% 0,
      100% 0%,
      0 0%,
      /* Bottom part */ 0 100%,
      100% 100%,
      100% 100%,
      0 100%
    );
  }
}

@keyframes text-appearing {
  from {
    opacity: 0;
    transform: translateY(10px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

